--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+html {
+  scroll-behavior: smooth;
+}
 
 * {
   font-family: "PlusJakartaSans";
